# WindowOCR

./: .gitignore  CMakeLists.txt  README.md  cardlabel.cpp  cardlabel.h  cardsscreen.cpp  cardsscreen.h  cardsscreen.ui  dealingscreen.cpp  dealingscreen.h  dealingscreen.ui  log.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  selectionwindow.cpp  selectionwindow.h  simple_ocr.h  问题需求记录.txt
